# codex-shim

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
codex_shim/: __init__.py  catalog.py  cli.py  server.py  settings.py
tests/: test_server.py  test_settings_catalog.py
