[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-shim"
version = "0.1.0"
description = "Local all-model BYOK shim for Codex Desktop and CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "0xSero" }]
keywords = ["codex", "byok", "openai", "anthropic", "responses-api", "model-routing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/0xSero/codex-shim"
Repository = "https://github.com/0xSero/codex-shim"
Issues = "https://github.com/0xSero/codex-shim/issues"

[project.scripts]
codex-shim = "codex_shim.cli:_entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
